corrected the added visibility

--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -143,7 +143,7 @@
      opacity and make it visible. */
   opacity: 0;
 }
-.addedItem{
+.added-to-cart-visible{
   opacity: 1;
 }
 
